--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"emitDecoratorMetadata": true, // JAG-10: Required by TypeORM
+		"experimentalDecorators": true // JAG-10: Required by TypeORM
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
