--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
     "@types/node": "^20.3.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
-    "postcss": "^8.4.24",
-    "postcss-load-config": "^4.0.1",
-    "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.2"
+    "vite": "^4.3.0"
   },
   "type": "module",
   "dependencies": {
