--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
+    "@tailwindcss/forms": "^0.5.4",
     "@types/node": "^20.3.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
