--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
     "@tailwindcss/forms": "^0.5.4",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
@@ -33,6 +34,7 @@
     "@rollup/plugin-typescript": "^11.1.2",
     "@skeletonlabs/skeleton": "^1.8.0",
     "argon2": "^0.30.3",
+    "lodash": "^4.17.21",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
